--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,9 @@
 {
-  "tasks": { "dev": "deno run --watch main.ts" },
-  "imports": { "@std/assert": "jsr:@std/assert@1" },
-  "dependencies": ["jsr:@std/assert@1"]
+  "tasks": { "dev": "deno run --allow-net --unstable-kv --watch main.ts" },
+  "imports": {
+    "@std/assert": "jsr:@std/assert@1",
+    "hono": "jsr:@hono/hono@^4",
+    "zod": "jsr:@zod/zod@^4",
+    "ts-morph": "jsr:@ts-morph/ts-morph@^27"
+  }
 }
