--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,8 @@
 {
-  "tasks": { "dev": "deno run --allow-net --unstable-kv --watch main.ts" },
+  "tasks": {
+    "dev": "deno run --allow-net --unstable-kv --watch main.ts",
+    "scope-check": "deno run --allow-read shared/prompt/scripts/check-scope.ts"
+  },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
     "hono": "jsr:@hono/hono@^4",
